@@ -273,6 +273,35 @@ public class ContentNegotiatingViewResolverTests {
 		verify(htmlViewResolver, jsonViewResolver, htmlView, jsonViewMock);
 	}
 
+	// SPR-9807
+
+	@Test
+	public void resolveViewNameAcceptHeaderWithSuffix() throws Exception {
+		request.addHeader("Accept", "application/vnd.example-v2+xml");
+
+		ViewResolver viewResolverMock = createMock(ViewResolver.class);
+		viewResolver.setViewResolvers(Arrays.asList(viewResolverMock));
+
+		viewResolver.afterPropertiesSet();
+
+		View viewMock = createMock("application_xml", View.class);
+
+		String viewName = "view";
+		Locale locale = Locale.ENGLISH;
+
+		expect(viewResolverMock.resolveViewName(viewName, locale)).andReturn(viewMock);
+		expect(viewMock.getContentType()).andReturn("application/*+xml").anyTimes();
+
+		replay(viewResolverMock, viewMock);
+
+		View result = viewResolver.resolveViewName(viewName, locale);
+
+		assertSame("Invalid view", viewMock, result);
+		assertEquals(new MediaType("application", "vnd.example-v2+xml"), request.getAttribute(View.SELECTED_CONTENT_TYPE));
+
+		verify(viewResolverMock, viewMock);
+	}
+
 	@Test
 	public void resolveViewNameAcceptHeaderDefaultView() throws Exception {
 		request.addHeader("Accept", "application/json");
